--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.10"
 aiohttp = "^3.8.3"
 beautifulsoup4 = "^4.11.1"
 aiohttp-jinja2 = "^1.5"
+requests = "^2.28.1"
 
 
 [build-system]
